@@ -206,7 +206,4 @@ man/man3/JudyHS_funcs:
 	cd man/man3; ln -s JudyHS_funcs JudyHSDel
 	cd man/man3; ln -s JudyHS_funcs JudyHSFreeArray
 
-distclean: clean
-
-clean:
-	rm -f man/man3/*
+CLEANFILES = man/man3/*
