@@ -4,3 +4,5 @@ AM_CFLAGS = @CFLAGS@ @WARN_CFLAGS@
 noinst_LTLIBRARIES = libJudyMalloc.la
 
 libJudyMalloc_la_SOURCES = JudyMalloc.c
+
+DISTCLEANFILES = .deps Makefile 
